Rename ovya/olbase in ovya/lib/base

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: ovya/olbase
+package: ovya/lib/base
 import:
 - package: github.com/Sirupsen/logrus
 - package: github.com/facebookgo/stack
