Add conf manager

--- a/glide.yaml
+++ b/glide.yaml
@@ -3,3 +3,4 @@ import:
 - package: github.com/Sirupsen/logrus
 - package: github.com/facebookgo/stack
 - package: github.com/stretchr/testify
+- package: github.com/spf13/viper
